style for header started

--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -11,7 +11,7 @@
 // Burger
 
 .navigation__toggle {
-  padding-right: 20px;
+  margin-right: 20px;
   width: 26px;
   height: 26px;
   grid-row: 1/2;
