--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -5,7 +5,7 @@
   height: 100%;
 }
 
-// ---Body---
+// Body
 
 .page__body {
   padding-top: 20px;
@@ -19,4 +19,28 @@
 
   @include set-font-style(var(--fz-main), var(--lh-main));
   color: var(--cl-txt-main);
+}
+
+// Header
+
+.page__header{
+  margin-bottom: 10px;
+  grid-row: 1/2;
+  grid-column: 1/2;
+}
+
+// Main
+
+.page__main{
+  margin-bottom: 10px;
+  grid-row: 2/3;
+  grid-column: 1/2;
+}
+
+// Footer
+
+.page__footer{
+  margin-bottom: 10px;
+  grid-row: 3/4;
+  grid-column: 1/2;
 }
