--- a/source/sass/blocks/text.scss
+++ b/source/sass/blocks/text.scss
@@ -1,9 +1,8 @@
-// Title clear
+// Text clear
 
-.title {
+.text {
   margin-top: 0;
   margin-right: 0;
   margin-bottom: 0;
   margin-left: 0;
-  color: var(--cl-txt-title);
 }
