--- a/source/sass/global/font-size.scss
+++ b/source/sass/global/font-size.scss
@@ -3,6 +3,10 @@
   --lh-main: 16px;
   --fz-main-title: 18px;
   --lh-main-title: 26px;
+  --fz-section-title: 20px;
+  --lh-section-title: 29px;
+  --fz-section-subtitle: 16px;
+  --lh-section-subtitle: 23px;
   --fz-menu-item: 18px;
   --lh-menu-item: 26px;
 }
