--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,6 +6,7 @@
 @import "global/mixin.scss";
 //Clear style
 @import "blocks/title.scss";
+@import "blocks/text.scss";
 @import "blocks/list.scss";
 @import "blocks/button.scss";
 @import "blocks/link.scss";
@@ -18,3 +19,8 @@
 @import "blocks/header.scss";
 @import "blocks/main-title.scss";
 @import "blocks/navigation.scss";
+@import "blocks/about.scss";
+@import "blocks/section-title.scss";
+@import "blocks/section-subtitle.scss";
+@import "blocks/main.scss";
+
