--- a/source/sass/global/color.scss
+++ b/source/sass/global/color.scss
@@ -9,6 +9,7 @@
   --cl-bg-button: rgb(52, 168, 219);
   --cl-bg-button-hover: rgba(52, 168, 219, 0.3);
   --cl-bg-button-active: rgba(52, 168, 219, 0.3);
+  --cl-txt-title: rgb(0,0,0);
   --cl-txt-main: rgb(68, 68, 68);
   --cl-txt-main-contrast: rgb(255, 255, 255);
   --cl-txt-button: rgb(255, 255, 255);
