skills stylization started

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,8 +19,9 @@
 @import "blocks/header.scss";
 @import "blocks/main-title.scss";
 @import "blocks/navigation.scss";
-@import "blocks/about.scss";
 @import "blocks/section-title.scss";
 @import "blocks/section-subtitle.scss";
 @import "blocks/main.scss";
+@import "blocks/about.scss";
+@import "blocks/skills.scss";
 
