portfolio style started

--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -1,6 +1,13 @@
 // ===Main===
 
 // About
-.main__about{
+
+.main__about {
+  margin-bottom: 10px;
+}
+
+//Skills
+
+.main__skills {
   margin-bottom: 10px;
 }
