--- a/source/sass/global/color.scss
+++ b/source/sass/global/color.scss
@@ -7,6 +7,8 @@
   --cl-bg-burger: rgb(140, 140, 140);
   --cl-bg-menu: rgb(255, 255, 255);
   --cl-bg-button: rgb(52, 168, 219);
+  --cl-bg-bullet-current: rgb(52, 168, 219);
+  --cl-bg-bullet: rgb(196, 196, 196);
   --cl-bg-button-hover: rgba(52, 168, 219, 0.3);
   --cl-bg-button-active: rgba(52, 168, 219, 0.3);
   --cl-txt-title: rgb(0,0,0);
