--- a/source/sass/global/font-size.scss
+++ b/source/sass/global/font-size.scss
@@ -9,6 +9,8 @@
   --lh-section-subtitle: 23px;
   --fz-menu-item: 18px;
   --lh-menu-item: 26px;
+  --fz-skills-item: 10px;
+  --lh-skilla-item: 25px;
 }
 
 @media (min-width: $tablet-width) {
