--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,6 +13,9 @@
 @import "blocks/img.scss";
 //Add block
 @import "global/visually-hidden.scss";
+//Slider
+@import "blocks/swiper.scss";
+@import "blocks/slick-theme.scss";
 //Blocks
 @import "blocks/page.scss";
 @import "blocks/container.scss";
