gulpfile set settings started

--- a/source/sass/global/color.scss
+++ b/source/sass/global/color.scss
@@ -11,7 +11,7 @@
   --cl-bg-bullet: rgb(196, 196, 196);
   --cl-bg-button-hover: rgba(52, 168, 219, 0.3);
   --cl-bg-button-active: rgba(52, 168, 219, 0.3);
-  --cl-txt-title: rgb(0,0,0);
+  --cl-txt-title: rgb(0, 0, 0);
   --cl-txt-main: rgb(68, 68, 68);
   --cl-txt-main-contrast: rgb(255, 255, 255);
   --cl-txt-button: rgb(255, 255, 255);
