--- a/source/sass/blocks/main-title.scss
+++ b/source/sass/blocks/main-title.scss
@@ -10,7 +10,7 @@
   @include uppercase();
 
   &::before {
-    content:'';
+    content: "";
     width: calc(100% + 20px);
     height: 100%;
     position: absolute;
