swipper settings started

--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -1,16 +1,6 @@
 // Slider
 .slider {
-  //min-width: 0;
-  // max-width: 100%;
-}
-
-.slider__content {
   min-width: 0;
   width: 280px;
+  max-width: 100%;
 }
-
-.slider__item {
-  overflow: hidden;
-}
-
-// Hidden
