--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,6 +16,9 @@
 //Slider
 @import "../../node_modules/swiper/swiper.scss";
 @import "../../node_modules/swiper/swiper-vars.scss";
+@import "../../node_modules/swiper/modules/navigation/navigation.scss";
+@import "../../node_modules/swiper/modules/pagination/pagination.scss";
+
 //Blocks
 @import "blocks/page.scss";
 @import "blocks/container.scss";
