--- a/source/sass/global/color.scss
+++ b/source/sass/global/color.scss
@@ -4,6 +4,7 @@
   --cl-bg-main: rgb(255, 255, 255);
   --cl-bg-relate: rgb(230, 230, 230);
   --cl-bg-contrast: rgb(0, 0, 0);
+  --cl-brd-link: rgb(0, 0, 0);
   --cl-bg-burger: rgb(140, 140, 140);
   --cl-bg-menu: rgb(255, 255, 255);
   --cl-bg-button: rgb(52, 168, 219);
