--- a/source/sass/global/font-size.scss
+++ b/source/sass/global/font-size.scss
@@ -7,6 +7,8 @@
   --lh-section-title: 29px;
   --fz-section-subtitle: 16px;
   --lh-section-subtitle: 23px;
+  --fz-subtitle: 12px;
+  --lh-subtitle: 16px;
   --fz-menu-item: 18px;
   --lh-menu-item: 26px;
   --fz-skills-item: 10px;
