--- a/source/sass/blocks/link.scss
+++ b/source/sass/blocks/link.scss
@@ -2,7 +2,7 @@
 
 .link {
   box-sizing: border-box;
-  display: block;
+  display: inline-block;
   color: inherit;
   text-decoration: none;
   cursor: pointer;
