--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -1,7 +1,42 @@
 // Slider
 .slider {
+  margin-right: auto;
+  margin-left: auto;
   box-sizing: border-box;
+  display: grid;
+  grid-template-rows: repeat(min-content,3);
+  grid-template-columns: min-content 1fr min-content;
+}
+
+// Image block
+.slider__image-block {
+  width: 100%;
   min-width: 0;
-  width: 280px;
-  max-width: 100%;
+  grid-row: 1/2;
+  grid-column: 2/3;
+  text-align: center;
+}
+
+// Description block
+
+.slider__description-block {
+  width: 100%;
+  min-width: 0;
+  grid-row: 3/4;
+  grid-column: 2/3;
+  text-align: center;
+}
+
+// Pagination
+
+.slider .slider__pagination {
+  position: relative;
+  grid-row: 2/3;
+  grid-column: 1/3;
+}
+
+// Navigation
+
+.slider .slider__control {
+  position: relative;
 }
