--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "Jost";
   src:
-    url("../../fonts/Jost-Regular.woff2") format("woff2"),
-    url("../../fonts/Jost-Regular.woff") format("woff");
+    url("../fonts/Jost-Regular.woff2") format("woff2"),
+    url("../fonts/Jost-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -11,8 +11,8 @@
 @font-face {
   font-family: "Jost";
   src:
-    url("../../fonts/Jost-Medium.woff2") format("woff2"),
-    url("../../fonts/Jost-Medium.woff") format("woff");
+    url("../fonts/Jost-Medium.woff2") format("woff2"),
+    url("../fonts/Jost-Medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -21,8 +21,8 @@
 @font-face {
   font-family: "Jost";
   src:
-    url("../../fonts/Jost-Italic.woff2") format("woff2"),
-    url("../../fonts/Jost-Italic.woff") format("woff");
+    url("../fonts/Jost-Italic.woff2") format("woff2"),
+    url("../fonts/Jost-Italic.woff") format("woff");
   font-weight: 400;
   font-style: italic;
   font-display: swap;
