Style for mobile version

--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -1,13 +1,17 @@
-// ===Main===
-
 // About
 
 .main__about {
   margin-bottom: 10px;
 }
 
-//Skills
+// Skills
 
 .main__skills {
+  margin-bottom: 10px;
+}
+
+//Portfolio
+
+.main__portfolio {
   margin-bottom: 10px;
 }
