--- a/source/sass/global/color.scss
+++ b/source/sass/global/color.scss
@@ -7,18 +7,19 @@
   --cl-brd-link: rgb(0, 0, 0);
   --cl-bg-burger: rgb(140, 140, 140);
   --cl-bg-menu: rgb(255, 255, 255);
-  --cl-bg-button: rgb(52, 168, 219);
   --cl-bg-bullet-current: rgb(52, 168, 219);
   --cl-bg-bullet: rgb(196, 196, 196);
-  --cl-bg-button-hover: rgba(52, 168, 219, 0.3);
-  --cl-bg-button-active: rgba(52, 168, 219, 0.3);
+  --cl-bg-slider-navigation: rgb(0, 0, 0);
+  --cl-bg-button: rgb(52, 168, 219);
+  --cl-bg-button-active: rgb(33, 124, 164);
   --cl-txt-title: rgb(0, 0, 0);
   --cl-txt-main: rgb(68, 68, 68);
+  --cl-txt-link-hover: rgb(104, 183, 56);
   --cl-txt-main-contrast: rgb(255, 255, 255);
   --cl-txt-button: rgb(255, 255, 255);
-  --cl-txt-button-active: rgba(255, 255, 255, 0.3);
   --cl-shd: rgba(0, 0, 0, 0.15);
-  --cl-fill-footer-icon: rgb(102, 102, 102);
+  --cl-shd-button: rgb(255, 255, 255);
+  --cl-fill-footer-icon: rgb(68, 68, 68);
   --cl-fill-footer-icon-hover: rgb(104, 183, 56);
   --cl-bg-decor: rgb(253, 216, 60);
 }
