--- a/source/sass/global/font-size.scss
+++ b/source/sass/global/font-size.scss
@@ -12,7 +12,12 @@
   --fz-menu-item: 18px;
   --lh-menu-item: 26px;
   --fz-skills-item: 10px;
-  --lh-skilla-item: 25px;
+  --lh-skills-item: 25px;
+  --fz-swiper-navigation: 35px;
+  --fz-slider-button: 13px;
+  --lh-slider-button: 18px;
+  --fz-footer-text: 16px;
+  --lh-footer-text: 23px;
 }
 
 @media (min-width: $tablet-width) {
