--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,4 +1,4 @@
-// ===Header===
+// Header
 
 .header {
   display: grid;
@@ -6,6 +6,8 @@
   grid-template-rows: min-content, min-content;
   background-color: var(--cl-bg-relate);
 }
+
+// Title
 
 .header__title {
   padding-top: 3px;
@@ -15,6 +17,8 @@
   grid-row: 1/2;
   grid-column: 1/2;
 }
+
+// Menu
 
 .header__menu {
   grid-row: 1/3;
