--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -89,7 +89,7 @@
     display: block;
     position: absolute;
     left: 0;
-    top: 52px;
+    top: 0;
     z-index: 20;
     box-shadow: 0 3px 4px var(--cl-shd);
   }
@@ -121,6 +121,11 @@
   grid-row: 2/3;
   grid-column: 1/3;
   background-color: var(--cl-bg-menu);
+
+  @media (min-width: $tablet-width) {
+    min-height: 0;
+    display: flex;
+  }
 }
 
 // Item
