--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -1,20 +1,39 @@
 // Slider
+
 .slider {
-  margin-right: auto;
-  margin-left: auto;
+  width: calc(100vw - 40px);
   box-sizing: border-box;
-  display: grid;
-  grid-template-rows: repeat(min-content,3);
-  grid-template-columns: min-content 1fr min-content;
+
+  @media (min-width: $tablet-width) {
+    width: 100%;
+    display: grid;
+    grid-template-rows: repeat(min-content, 3);
+    grid-template-columns: min-content 1fr min-content;
+  }
 }
 
 // Image block
+
 .slider__image-block {
   width: 100%;
   min-width: 0;
-  grid-row: 1/2;
-  grid-column: 2/3;
   text-align: center;
+
+  @media (min-width: $tablet-width) {
+    grid-row: 1/2;
+    grid-column: 2/3;
+  }
+}
+
+//Image
+
+.slider__img{
+  max-width: 280px;
+  height: auto;
+
+  @media (min-width:$tablet-width) {
+    max-width: 280px;
+  }
 }
 
 // Description block
@@ -22,9 +41,48 @@
 .slider__description-block {
   width: 100%;
   min-width: 0;
-  grid-row: 3/4;
-  grid-column: 2/3;
   text-align: center;
+
+  @media (min-width: $tablet-width) {
+    grid-row: 3/4;
+    grid-column: 2/3;
+  }
+}
+
+// Description item
+
+.slider__description-item {
+  min-height: 170px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+// Text block
+
+.slider__text-block {
+  margin-bottom: 10px;
+  flex: 1 1 auto;
+}
+
+// Navigation
+
+.slider .slider__control {
+  display: none;
+
+  @media (min-width: $tablet-width) {
+    display: block;
+
+    &::after {
+      font-size: var(--fz-swiper-navigation);
+      color: var(--cl-bg-slider-navigation);
+      transition: all 0.3s ease;
+    }
+
+    &:hover::after {
+      opacity: 0.5;
+    }
+  }
 }
 
 // Pagination
@@ -39,4 +97,24 @@
 
 .slider .slider__control {
   position: relative;
+}
+
+// Text
+
+.slider__text {
+  margin-bottom: 5px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+// Button
+
+.slider__button {
+  padding-top: 5px;
+  padding-right: 15px;
+  padding-bottom: 5px;
+  padding-left: 15px;
+  margin-bottom: 5px;
 }
