--- a/source/sass/blocks/swiper.scss
+++ b/source/sass/blocks/swiper.scss
@@ -3,11 +3,16 @@
 .swiper-pagination > .swiper-pagination-bullet {
   width: 20px;
   height: 2px;
+  border-radius: 0;
+  opacity: 1;
   background-color: var(--cl-bg-bullet);
 }
 
 .swiper-pagination > .swiper-pagination-bullet-active {
-  width: 20px;
-  height: 2px;
   background-color: var(--cl-bg-bullet-current);
+}
+
+.swiper .swiper-wrapper--image{
+  width: 280px;
+  outline: 1px solid green;
 }
