--- a/source/sass/blocks/text-link.scss
+++ b/source/sass/blocks/text-link.scss
@@ -3,6 +3,8 @@
 .text-link {
   position: relative;
   font-style: italic;
+  transition: all 0.3s ease-out;
+
   &::before {
     content: "";
     width: 100%;
@@ -13,10 +15,14 @@
     border-bottom: 1px dashed var(--cl-brd-link);
   }
   &:hover::before {
-    border: 1px dashed var(--cl-brd-link);
-    opacity: 0.5;
+    border: 1px dashed var(--cl-txt-link-hover);
   }
+
   &:hover {
+    color: var(--cl-txt-link-hover);
+  }
+
+  &:active {
     opacity: 0.5;
   }
 }
