--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,34 +3,41 @@
 @import "global/fonts.scss";
 @import "global/font-size.scss";
 @import "global/color.scss";
-@import "global/mixin.scss";
-//Clear style
-@import "blocks/title.scss";
-@import "blocks/text.scss";
-@import "blocks/list.scss";
-@import "blocks/button.scss";
-@import "blocks/link.scss";
-@import "blocks/img.scss";
-//Add block
 @import "global/visually-hidden.scss";
+@import "global/mixin.scss";
+
+//Clear style
+
+@import "clear/title.scss";
+@import "clear/text.scss";
+@import "clear/list.scss";
+@import "clear/button.scss";
+@import "clear/link.scss";
+@import "clear/img.scss";
+
+//Blocks
+
+@import "blocks/main-title.scss";
+@import "blocks/section-title.scss";
+@import "blocks/section-subtitle.scss";
+@import "blocks/subtitle.scss";
+@import "blocks/text-link.scss";
+@import "blocks/button-preview.scss";
+@import "blocks/page.scss";
+@import "blocks/main.scss";
+@import "blocks/container.scss";
+@import "blocks/header.scss";
+@import "blocks/navigation.scss";
+@import "blocks/about.scss";
+@import "blocks/skills.scss";
+@import "blocks/portfolio.scss";
+@import "blocks/footer.scss";
+
 //Slider
+
 @import "blocks/slider.scss";
 @import "blocks/swiper.scss";
 @import "../../node_modules/swiper/swiper.scss";
 @import "../../node_modules/swiper/swiper-vars.scss";
 @import "../../node_modules/swiper/modules/navigation/navigation.scss";
 @import "../../node_modules/swiper/modules/pagination/pagination";
-//Blocks
-@import "blocks/page.scss";
-@import "blocks/container.scss";
-@import "blocks/header.scss";
-@import "blocks/main-title.scss";
-@import "blocks/section-title.scss";
-@import "blocks/section-subtitle.scss";
-@import "blocks/subtitle.scss";
-@import "blocks/text-link.scss";
-@import "blocks/navigation.scss";
-@import "blocks/main.scss";
-@import "blocks/about.scss";
-@import "blocks/skills.scss";
-
