--- a/source/sass/global/font-size.scss
+++ b/source/sass/global/font-size.scss
@@ -24,6 +24,16 @@
   :root {
     --fz-main: 16px;
     --lh-main: 24px;
+    --fz-section-title: 22px;
+    --lh-section-title: 31px;
+    --fz-section-subtitle: 19px;
+    --lh-section-subtitle: 26px;
+    --fz-skills-item: 13px;
+    --lh-skills-item: 27px;
+    --fz-subtitle: 16px;
+    --lh-subtitle: 20px;
+    --fz-slider-button: 16px;
+    --lh-slider-button: 20px;
   }
 }
 
