--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -22,6 +22,7 @@
   margin-bottom: 5px;
   display: flex;
   align-items: center;
+  transition: all 0.3s ease-out;
 
   &:hover {
     color: var(--cl-txt-link-hover);
