--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -5,6 +5,18 @@
   grid-template-columns: 1fr 1fr;
   grid-template-rows: min-content, min-content;
   background-color: var(--cl-bg-relate);
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+  }
+}
+
+// Container
+
+.header__container {
+  @media (max-width: $mobile-width-only) {
+    width: 100%;
+  }
 }
 
 // Title
@@ -16,6 +28,13 @@
   padding-left: 20px;
   grid-row: 1/2;
   grid-column: 1/2;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 10px;
+    padding-right: 30px;
+    padding-bottom: 10px;
+    padding-left: 30px;
+  }
 }
 
 // Menu
