--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -5,35 +5,36 @@
   box-sizing: border-box;
 
   @media (min-width: $tablet-width) {
-    width: 100%;
+    width: calc(100vw - 60px);
     display: grid;
     grid-template-rows: repeat(min-content, 3);
     grid-template-columns: min-content 1fr min-content;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 100%;
   }
 }
 
 // Image block
 
 .slider__image-block {
-  width: 100%;
+  width: 280px;
   min-width: 0;
   text-align: center;
 
   @media (min-width: $tablet-width) {
+    width: 620px;
     grid-row: 1/2;
     grid-column: 2/3;
   }
 }
 
-//Image
+// Image
 
-.slider__img{
-  max-width: 280px;
+.slider__img {
+  width: 100%;
   height: auto;
-
-  @media (min-width:$tablet-width) {
-    max-width: 280px;
-  }
 }
 
 // Description block
@@ -44,6 +45,7 @@
   text-align: center;
 
   @media (min-width: $tablet-width) {
+    max-width: 620px;
     grid-row: 3/4;
     grid-column: 2/3;
   }
