--- a/source/sass/blocks/main-title.scss
+++ b/source/sass/blocks/main-title.scss
@@ -1,22 +1,13 @@
-//===Main title===
+// Main title
 
 .main-title {
-  position: relative;
   text-align: center;
-  z-index: 0;
   color: var(--cl-txt-main-contrast);
 
   @include set-font-style(var(--fz-main-title), var(--lh-main-title));
   @include uppercase();
 
-  &::before {
-    content: "";
-    width: calc(100% + 20px);
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: -20px;
-    z-index: -1;
-    background-color: var(--cl-bg-contrast);
+  @media (min-width: $tablet-width) {
+    text-align: left;
   }
 }
