--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -11,7 +11,6 @@
 // Burger
 
 .navigation__toggle {
-  margin-right: 20px;
   width: 26px;
   height: 26px;
   grid-row: 1/2;
@@ -89,7 +88,7 @@
     display: block;
     position: absolute;
     left: 0;
-    top: 0;
+    top: 46px;
     z-index: 20;
     box-shadow: 0 3px 4px var(--cl-shd);
   }
@@ -104,7 +103,7 @@
 .navigation--nojs .navigation__list {
   @media (max-width: $mobile-width-only) {
     display: block;
-    margin-top: 30px;
+    margin-top: 46px;
     position: static;
     min-height: 0;
   }
@@ -113,9 +112,9 @@
 // List
 
 .navigation__list {
-  box-sizing: border-box;
   padding-top: 10px;
   padding-bottom: 10px;
+  box-sizing: border-box;
   width: 100%;
   min-height: 100px;
   grid-row: 2/3;
@@ -125,6 +124,7 @@
   @media (min-width: $tablet-width) {
     padding-top: 0;
     padding-bottom: 0;
+    width: 100%;
     min-height: 0;
     display: flex;
     background-color: transparent;
@@ -152,6 +152,26 @@
   text-align: center;
   color: inherit;
   transition: all 0.3s ease-out;
+
+  @media (min-width: $tablet-width) {
+    position: relative;
+    text-transform: uppercase;
+    font-weight: 400;
+
+    &:hover {
+      color: var(--cl-txt-link-hover);
+    }
+
+    &:hover::before {
+      content: "";
+      position: absolute;
+      right: 20px;
+      bottom: 10px;
+      left: 20px;
+      border-bottom: 1px dashed var(--cl-txt-link-hover);
+      color: var(--cl-txt-link-hover);
+    }
+  }
 
   &:hover {
     opacity: 0.6;
