--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -27,6 +27,7 @@
   @media (max-width: $mobile-width-only) {
     width: 100%;
     position: fixed;
+    top:0;
     grid-row: 1/2;
     grid-column: 1/2;
   }
@@ -35,7 +36,7 @@
 // Main
 
 .page__main {
-  margin-top: 42px;
+  margin-top: 46px;
   margin-bottom: 10px;
   grid-row: 2/3;
   grid-column: 1/2;
