--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,7 +1,8 @@
 // Footer
 
 .footer {
-  box-shadow: 0px -3px 4px var(--cl-shd);
+  box-shadow: 0 -3px 4px var(--cl-shd);
+
   @include set-font-style(var(--fz-footer-text), var(--lh-footer-text));
 }
 
@@ -28,8 +29,8 @@
     color: var(--cl-txt-link-hover);
   }
 
-  &:hover .footer__icon{
-    fill: var( --cl-fill-footer-icon-hover);
+  &:hover .footer__icon {
+    fill: var(--cl-fill-footer-icon-hover);
   }
 }
 
