--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -2,6 +2,19 @@
 
 .header {
   background-color: var(--cl-bg-relate);
+
+  @media (max-width: $mobile-width-only) {
+    width: 100%;
+    position: fixed;
+    top: 0;
+  }
+}
+
+.header.header--nojs  {
+  @media (max-width: $mobile-width-only) {
+    margin-bottom: 10px;
+    position: static;
+  }
 }
 
 // Container
@@ -69,7 +82,7 @@
 
 .header__menu {
   grid-row: 1/3;
-  grid-column: 3/4;
+  grid-column: 1/5;
   align-self: center;
 
   @media (min-width: $tablet-width) {
