--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -2,19 +2,40 @@
 
 .navigation {
   display: grid;
-  grid-template-columns: 1fr;
   grid-template-rows: min-content, min-content;
+  grid-template-columns: 1fr;
 
   @include set-font-style(var(--fz-menu-item), var(--lh-menu-item), "Jost", 500);
 }
 
+
+// .navigation .navigation--nojs{
+//   @media (max-width: $mobile-width-only) {
+//     width: 100%;
+//     position: static;
+//     top: 0;
+//   }
+// }
+
+// .navigation--nojs .navigation-list {
+//   @media (max-width: $mobile-width-only) {
+//     width: 100%;
+//     position: static;
+//     top: 0;
+//   }
+// }
+
 // Burger
 
 .navigation__toggle {
-  width: 26px;
-  height: 26px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-right: 20px;
+  width: 46px;
+  height: 46px;
+  box-sizing: border-box;
   grid-row: 1/2;
-  grid-column: 2/3;
+  grid-column: 1/2;
   justify-self: end;
   position: relative;
   z-index: 20;
@@ -35,9 +56,8 @@
     position: absolute;
     background-color: var(--cl-bg-burger);
   }
-
   &::before {
-    width: 11px;
+    width: 20px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -45,11 +65,11 @@
   }
 
   &::after {
-    width: 18px;
-    top: 6px;
+    width: 30px;
+    top: 10px;
     left: 50%;
     transform: translateX(-50%);
-    box-shadow: 0 12px 0 var(--cl-bg-burger);
+    box-shadow: 0 24px 0 var(--cl-bg-burger);
   }
 }
 
@@ -88,7 +108,6 @@
     display: block;
     position: absolute;
     left: 0;
-    top: 46px;
     z-index: 20;
     box-shadow: 0 3px 4px var(--cl-shd);
   }
@@ -102,10 +121,12 @@
 
 .navigation--nojs .navigation__list {
   @media (max-width: $mobile-width-only) {
-    display: block;
     margin-top: 46px;
-    position: static;
+    width: 100%;
     min-height: 0;
+    position: static;
+    display: block;
+    box-shadow: 0 3px 4px var(--cl-shd);
   }
 }
 
