--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -24,19 +24,16 @@
 // Header
 
 .page__header {
-  @media (max-width: $mobile-width-only) {
-    width: 100%;
-    position: fixed;
-    top: 0;
-    grid-row: 1/2;
-    grid-column: 1/2;
-  }
+  grid-row: 1/2;
+  grid-column: 1/2;
+
+
 }
 
 // Main
 
 .page__main {
-  margin-top: 46px;
+  //margin-top: 46px;
   margin-bottom: 10px;
   grid-row: 2/3;
   grid-column: 1/2;
