--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -8,23 +8,6 @@
   @include set-font-style(var(--fz-menu-item), var(--lh-menu-item), "Jost", 500);
 }
 
-
-// .navigation .navigation--nojs{
-//   @media (max-width: $mobile-width-only) {
-//     width: 100%;
-//     position: static;
-//     top: 0;
-//   }
-// }
-
-// .navigation--nojs .navigation-list {
-//   @media (max-width: $mobile-width-only) {
-//     width: 100%;
-//     position: static;
-//     top: 0;
-//   }
-// }
-
 // Burger
 
 .navigation__toggle {
@@ -107,6 +90,7 @@
   @media (max-width: $mobile-width-only) {
     display: block;
     position: absolute;
+    top: 46px;
     left: 0;
     z-index: 20;
     box-shadow: 0 3px 4px var(--cl-shd);
