page setting when burger open

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,6 +5,7 @@
 @import "global/color.scss";
 @import "global/visually-hidden.scss";
 @import "global/mixin.scss";
+@import "global/lock";
 
 //Clear style
 
