--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -2,7 +2,6 @@
 
 .slider {
   width: calc(100vw - 40px);
-  box-sizing: border-box;
 
   @media (min-width: $tablet-width) {
     width: calc(100vw - 60px);
@@ -16,11 +15,14 @@
   }
 }
 
+.slider__image-item {
+  display: flex;
+  justify-content: center;
+}
+
 // Image block
 
 .slider__image-block {
-  width: 280px;
-  min-width: 0;
   text-align: center;
 
   @media (min-width: $tablet-width) {
@@ -34,7 +36,12 @@
 
 .slider__img {
   width: 100%;
-  height: auto;
+  height: 193px;
+  object-fit: contain;
+
+  @media (min-width: $tablet-width) {
+    height: 426px;
+  }
 }
 
 // Description block
@@ -64,7 +71,14 @@
 
 .slider__text-block {
   margin-bottom: 10px;
+  min-height: 133px;
   flex: 1 1 auto;
+}
+
+// Button
+
+.slider__button {
+  margin-top: auto;
 }
 
 // Navigation
