--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -44,10 +44,7 @@
 // Title
 
 .header__title {
-  padding-top: 10px;
-  padding-right: 20px;
-  padding-bottom: 10px;
-  padding-left: 20px;
+  padding: 10px 20px 10px 0;
   box-sizing: border-box;
   grid-row: 1/2;
   grid-column: 2/3;
