--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -1,15 +1,14 @@
 // ===Page===
 
 .page {
-  max-width: 100%;
+  min-width: 100%;
   height: 100%;
 }
 
 // Body
 
 .page__body {
-  margin-right: auto;
-  margin-left: auto;
+  margin: 0;
   min-width: $mobile-width;
   min-height: 100%;
   position: relative;
