--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,14 +7,13 @@
 @import "global/mixin.scss";
 @import "global/lock";
 
-//Clear style
+//Big block
 
-@import "clear/title.scss";
-@import "clear/text.scss";
-@import "clear/list.scss";
-@import "clear/button.scss";
-@import "clear/link.scss";
-@import "clear/img.scss";
+@import "blocks/page.scss";
+@import "blocks/body.scss";
+@import "blocks/header.scss";
+@import "blocks/main.scss";
+@import "blocks/footer.scss";
 
 //Blocks
 
@@ -24,15 +23,11 @@
 @import "blocks/subtitle.scss";
 @import "blocks/text-link.scss";
 @import "blocks/button-preview.scss";
-@import "blocks/page.scss";
-@import "blocks/main.scss";
 @import "blocks/container.scss";
-@import "blocks/header.scss";
 @import "blocks/navigation.scss";
 @import "blocks/about.scss";
 @import "blocks/skills.scss";
 @import "blocks/portfolio.scss";
-@import "blocks/footer.scss";
 
 //Slider
 
