--- a/source/sass/blocks/section-title.scss
+++ b/source/sass/blocks/section-title.scss
@@ -1,4 +1,4 @@
-//===Section title===
+// Section title
 
 .section-title {
   @include set-font-style(var(--fz-section-title), var(--lh-section-title));
