--- a/source/sass/blocks/button-preview.scss
+++ b/source/sass/blocks/button-preview.scss
@@ -3,6 +3,7 @@
 .button-preview {
   border-radius: 3px;
   background-color: var(--cl-bg-button);
+  text-decoration: none;
   color: var(--cl-txt-main-contrast);
   transition: all 0.3s ease-out;
 
