--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -1,14 +1,8 @@
 // Container
 
 .container {
-  padding-top: 0;
-  padding-right: 20px;
-  padding-bottom: 0;
-  padding-left: 20px;
-  margin-top: 0;
-  margin-right: auto;
-  margin-bottom: 0;
-  margin-left: auto;
+  padding: 0 20px;
+  margin: 0 auto;
   box-sizing: border-box;
   min-width: $mobile-width;
   max-width: $desktop-width;
