--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -9,8 +9,7 @@
 // Container
 
 .footer__container {
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding: 20px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,9 +19,11 @@
 // Link
 
 .footer__link {
-  margin-bottom: 5px;
   display: flex;
+  margin-bottom: 10px;
   align-items: center;
+  text-decoration: none;
+  color: inherit;
   transition: all 0.3s ease-out;
 
   &:hover {
@@ -42,4 +43,10 @@
   height: 20px;
   fill: var(--cl-fill-footer-icon);
   transition: all 0.3s ease-out;
+}
+
+// Author
+
+.footer__author {
+  margin: 0;
 }
