--- a/source/sass/blocks/text-link.scss
+++ b/source/sass/blocks/text-link.scss
@@ -3,6 +3,8 @@
 .text-link {
   position: relative;
   font-style: italic;
+  color: inherit;
+  text-decoration: none;
   transition: all 0.3s ease-out;
 
   &::before {
