--- a/source/sass/blocks/body.scss
+++ b/source/sass/blocks/body.scss
@@ -1,5 +1,15 @@
 // Header
 
+.body {
+  position: relative;
+  padding-top: 90px;
+}
+
 .body__header {
   margin-bottom: 20px;
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  right: 0;
 }
